--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-# ================= SERVER =================
-server.port=8080
+# Server
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Krishna@491
+# Database
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/paymentdb?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:Krishna@491}
+
+# Razorpay
+razorpay.key.id=${RAZORPAY_ID:rzp_test_RtR6TqgMazIdkg}
+razorpay.key.secret=${RAZORPAY_SECRET:rPEGGgm3s7xpefnVNoUcbgcn}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# ================= RAZORPAY KEYS =================
-razorpay.key.id=rzp_test_RtR6TqgMazIdkg
-razorpay.key.secret=rPEGGgm3s7xpefnVNoUcbgcn
-
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.servlet.session.persistent=false
-
