--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -2,10 +2,8 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy only pom.xml first for dependency caching
+# Copy pom.xml and download dependencies
 COPY pom.xml .
-
-# Download dependencies (offline mode)
 RUN mvn dependency:go-offline
 
 # Copy source & build
@@ -13,15 +11,14 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # ============== RUN STAGE ==============
-FROM eclipse-temurin:17-jre
+# Use 'jre' for a smaller, faster image
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 
-# Copy jar from build stage
-COPY --from=build /app/target/payment-0.0.1-SNAPSHOT.jar app.jar
+# FIX: Use wildcard (*.jar) so the exact name doesn't matter
+COPY --from=build /app/target/*.jar app.jar
 
-# JVM options (optional)
-ENV JAVA_OPTS=""
-
+# Standard Render port
 EXPOSE 8080
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
