--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Server
-server.port=${PORT:8080}
+server.port=16821
 
 # Database
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/paymentdb?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASSWORD:Krishna@491}
+spring.datasource.url=jdbc:mysql://mysql-491-vrms9206-d263.l.aivencloud.com:16821/defaultdb?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_ukN5BYaooeYylIxeDPj
 
 # Razorpay
-razorpay.key.id=${RAZORPAY_ID:rzp_test_RtR6TqgMazIdkg}
-razorpay.key.secret=${RAZORPAY_SECRET:rPEGGgm3s7xpefnVNoUcbgcn}
+razorpay.key.id=RAZORPAY_ID:rzp_test_RtR6TqgMazIdkg
+razorpay.key.secret=RAZORPAY_SECRET:rPEGGgm3s7xpefnVNoUcbgcn
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
