--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-
-
-# Database
-spring.datasource.url=jdbc:mysql://mysql-491-vrms9206-d263.l.aivencloud.com:16821/defaultdb?ssl-mode=REQUIRED
+spring.datasource.url=jdbc:mysql://mysql-491-vrms9206-d263.I.aivencloud.com:16821/defaultdb?sslMode=REQUIRED
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_ukN5BYaooeYylIxeDPj
 
-# Razorpay
-razorpay.key.id=RAZORPAY_ID:rzp_test_RtR6TqgMazIdkg
-razorpay.key.secret=RAZORPAY_SECRET:rPEGGgm3s7xpefnVNoUcbgcn
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.servlet.session.persistent=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+
