--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:mysql://mysql-491-vrms9206-d263.I.aivencloud.com:16821/defaultdb?sslMode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_ukN5BYaooeYylIxeDPj
+
+
+
+
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?useSSL=false&serverTimezone=UTC
+
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
