--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_
 
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+razorpay.key.id=rzp_test_RtR6TqgMazIdkg
+razorpay.key.secret=rPEGGgm3s7xpefnVNoUcbgcn
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
