--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -11,4 +11,4 @@ razorpay.key.secret=rPEGGgm3s7xpefnVNoUcbgcn
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
