--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 
 server.port=${PORT}
 
-
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?sslMode=REQUIRED&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
